--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -43,7 +43,7 @@
       "WithThreadId"
     ],
     "Properties": {
-      "Application": "ServiceTemplate"
+      "Application": "$(ServiceName)"
     }
   },
   "AllowedHosts": "*",
